# kademlia

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  BUGS.md  CMakeLists.txt  CMakePresets.json  INSTALL  INSTALL.md  NEWS.md  README  README.md  appveyor.yml  vcpkg.json
.circleci/: config.yml
.github/workflows/: linux.yaml  osx.yaml  windows.yaml
ci/travis/: Dockerfile
cmake/: BuildTreeProjectConfig.cmake.in  CMakeFindFrameworks.cmake  InstalledProjectConfig.cmake.in  dependencies.cmake  install.cmake  options.cmake  project_setup.cmake
cmake/Modules/: FindBotan.cmake
continuous_integration/docker/buildbot/ubuntu14/: Dockerfile
doc/continuous_integration/docker/buildbot/centos7/: Dockerfile
doc/continuous_integration/docker/buildbot/debian8/: Dockerfile
doc/continuous_integration/docker/buildbot/fedora21/: Dockerfile
doc/continuous_integration/docker/buildbot/ubuntu14/: Dockerfile
docs/: CMakeLists.txt  conf.py  index.rst
docs/api/: endpoint.rst  error.rst  session.rst
docs/examples/: bootstrap.rst  cli.rst
docs/overview/: concept.rst  installation.rst  walkthrough.rst
docs/source/: index.rst
docs/source/api/: endpoint.rst  error.rst  first_session.rst
docs/source/examples/: cli.rst
examples/: CMakeLists.txt  bootstrap.cpp  cli.cpp
include/: CMakeLists.txt
include/kademlia/: endpoint.hpp  error.hpp  first_session.hpp  session.hpp  session_base.hpp
include/kademlia/detail/: cxx11_macros.hpp  symbol_visibility.hpp
install/include/kademlia/: endpoint.hpp  error.hpp  first_session.hpp  session.hpp  session_base.hpp
install/include/kademlia/detail/: error_symbol_visibility.hpp  symbol_visibility.hpp
install/lib/: kademlia-endpoint.lib  kademlia-error.lib
install/share/kademlia/: kademliaConfig.cmake  kademliaConfigVersion.cmake  kademliaTargets-debug.cmake  kademliaTargets.cmake
scripts/: generate_coverage_report.sh  generate_profiling_report.sh
src/: CMakeLists.txt  boost_to_std_error.hpp  buffer.hpp  candidate.hpp  concurrent_guard.hpp  endpoint.cpp  engine.hpp  error.cpp  find_value_context.hpp  id.cpp  id.hpp  ip_endpoint.hpp  message.cpp  message.hpp  message_dispatcher.cpp  message_dispatcher.hpp  message_serializer.cpp  message_serializer.hpp  message_socket.cpp  message_socket.hpp  messages.hpp  net.cpp  net.hpp  peer.cpp  peer.hpp  r.hpp  response_dispatcher.cpp  response_dispatcher.hpp  routing_table.cpp  routing_table.hpp  serialization.hpp  session.cpp  socket.hpp  store_value_context.hpp  subnet.hpp  task_base.hpp  timeout_manager.cpp  timeout_manager.hpp  timer.cpp  timer.hpp  (+2 more)
src/kademlia/: CMakeLists.txt  boost_to_std_error.hpp  buffer.hpp  concurrent_guard.hpp  constants.cpp  constants.hpp  core.hpp  discover_neighbors_task.hpp  endpoint.cpp  engine.hpp  error.cpp  error_impl.cpp  error_impl.hpp  find_value_context.hpp  find_value_task.hpp  first_session.cpp  id.cpp  id.hpp  ip_endpoint.cpp  ip_endpoint.hpp  log.cpp  log.hpp  lookup_task.hpp  message.cpp  message.hpp  message_serializer.cpp  message_serializer.hpp  message_socket.hpp  network.hpp  notify_peer_context.hpp  notify_peer_task.hpp  peer.cpp  peer.hpp  r.hpp  response_callbacks.cpp  response_callbacks.hpp  response_dispatcher.cpp  response_dispatcher.hpp  response_router.hpp  routing_table.hpp  (+11 more)
test/: CMakeLists.txt  fake_socket.hpp  helper_common.hpp  helper_peer.hpp  main.cpp  pattern_empty_routing_table.out  test_engine.hpp  test_find_value_context.cpp  test_id.cpp  test_message.cpp  test_message_dispatcher.cpp  test_message_socket.cpp  test_peer.cpp  test_r.cpp  test_response_dispatcher.cpp  test_routing_table.cpp  test_session.cpp  test_store_value_context.cpp  test_timeout_manager.cpp  test_timer.cpp  test_value_context.cpp
test/captures/: pattern_empty_routing_table.out  pattern_id.out
test/chain_tests/: CMakeLists.txt  _kademlia.cpp  bootstrap.feature  environment.py  wrapper.cpp
test/chain_tests/steps/: bootstrap.py  creation.py  endpoint.py  message.py  messages.py  service.py  session.py
test/helpers/: common.cpp  common.hpp  peer_factory.hpp
test/simulator/: CMakeLists.txt  application.cpp  application.hpp  configuration.hpp  executable.cpp  executable.hpp  fake_socket.hpp  main.cpp
test/unit_tests/: CMakeLists.txt  common.cpp  common.hpp  corrupted_message.hpp  llvm_gcov.in  main.cpp  network.cpp  network.hpp  network_utils.cpp  network_utils.hpp  peer_factory.hpp  routing_table_mock.hpp  socket_mock.hpp  task_fixture.hpp  test_boost_to_std_error.cpp  test_concurrent_guard.cpp  test_discover_neighbors_task.cpp  test_endpoint.cpp  test_engine.cpp  test_error.cpp  test_fake_socket.cpp  test_find_value_context.cpp  test_find_value_task.cpp  test_first_session.cpp  test_id.cpp  test_ip_endpoint.cpp  test_log.cpp  test_lookup_task.cpp  test_message.cpp  test_message_serializer.cpp  test_message_socket.cpp  test_network.cpp  test_notify_peer_task.cpp  test_peer.cpp  test_r.cpp  test_response_callbacks.cpp  test_response_dispatcher.cpp  test_response_router.cpp  test_routing_table.cpp  test_session.cpp  (+6 more)
test/unit_tests/captures/: pattern_header.out
test/unit_tests/helpers/: common.cpp  common.hpp  network.cpp  network.hpp  peer_factory.hpp  routing_table_mock.hpp  task_fixture.hpp  tracker_mock.hpp
test/utils/: fake_socket.hpp
